# karma

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  ONBOARDING.md  README.md  cloudbuild-api.yaml  cloudbuild-web.yaml  firestore.indexes.json  package-lock.json
.claude/: settings.local.json
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: deploy-agents.yml  deploy-api.yml  deploy-synthetic-env.yml  deploy-web.yml
.playwright-mcp/: page-2026-05-18T22-40-14-216Z.yml  page-2026-05-18T22-40-57-963Z.yml  page-2026-05-18T22-48-05-797Z.yml  page-2026-05-18T23-06-25-266Z.yml  page-2026-05-18T23-07-32-219Z.yml  page-2026-05-18T23-08-17-053Z.yml  page-2026-05-18T23-09-30-361Z.yml  page-2026-05-18T23-09-44-780Z.yml  page-2026-05-18T23-10-52-521Z.yml  page-2026-05-18T23-11-02-981Z.yml  page-2026-05-18T23-11-12-041Z.yml  page-2026-05-18T23-11-53-500Z.yml  page-2026-05-18T23-12-04-231Z.yml  page-2026-05-18T23-27-03-603Z.yml  page-2026-05-18T23-27-12-724Z.yml  page-2026-05-18T23-27-30-546Z.yml  page-2026-05-18T23-27-38-186Z.yml  page-2026-05-18T23-27-55-454Z.yml  page-2026-05-18T23-27-56-775Z.yml  page-2026-05-18T23-28-05-088Z.yml  page-2026-05-18T23-28-17-890Z.yml  page-2026-05-18T23-28-26-205Z.yml  page-2026-05-18T23-28-39-394Z.yml  page-2026-05-18T23-28-54-761Z.yml  page-2026-05-18T23-47-49-578Z.yml  page-2026-05-18T23-58-01-322Z.yml  page-2026-05-18T23-58-48-965Z.yml  page-2026-05-18T23-59-30-768Z.yml  page-2026-05-19T00-00-34-535Z.yml  page-2026-05-19T00-04-55-696Z.yml  page-2026-05-19T00-05-15-404Z.yml  page-2026-05-19T00-05-19-887Z.yml  page-2026-05-19T00-05-29-036Z.yml  page-2026-05-19T00-06-40-486Z.yml
agents/: .env.example  Dockerfile  README.md  pyproject.toml
agents/karma/: __init__.py  app.py  config.py  coordinator.py  forensic.py  learner.py  otel.py  otel_callbacks.py  watcher.py
agents/karma/prompts/: contract_schema.json  forensic_system.md  learner_system.md
agents/karma/schemas/: __init__.py  contract.py
agents/karma/tools/: __init__.py  contract_validator.py  contract_validator_tool.py  dynatrace_api_tools.py  dynatrace_events.py  dynatrace_mcp.py  dynatrace_problems.py  dynatrace_slo.py  firestore_tools.py  mcp_gateway_tools.py  memory_bank_tools.py  pubsub_tools.py
agents/tests/: test_contract_validator.py  test_schemas.py
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/app/: __init__.py  agent_client.py  auth.py  chat_client.py  config.py  dt_client.py  dt_copilot.py  dt_notebook.py  firestore_client.py  github_client.py  main.py  models.py  otel.py  webhooks.py
api/app/routes/: admin.py  console.py  contracts.py  cutover.py  demo.py  ghosts.py  proof.py  pubsub.py  readiness.py  services.py  stats.py  stream.py  users.py
api/scripts/: backfill_karma_deployments.py
api/tests/: test_routes.py
bindplane/: README.md  pipeline.yaml
design_ui/: index.html  main.js  styles.css
docs/: ARCHITECTURE.md  CLAUDE_CODE_MONITORING.md  CONTRACT_SCHEMA.md  DEMO_RUNBOOK.md  DYNATRACE_SETUP.md  GITHUB_ACTIONS_SETUP.md  KARMA_IMPLEMENTATION_PLAN.md  PIP_PACKAGE_PLAN.md  dynatrace-dashboard.json  dynatrace-mcp-info.md  hackathon_description.md
infrastructure/: setup-dynatrace.ps1  setup-dynatrace.sh  setup-wif.ps1
infrastructure/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
karma-remediations/: ae2e4ce9.diff
scripts/: dogfood_register.py  emit_claude_session_span.py  golden-run-snapshot.sh  record_karma_deployment.py  reset-demo.sh  seed-demo-data.sh  seed_claude_code_spans.py
synthetic-env/: docker-compose.yml
synthetic-env/deploy/cloud-run/: load-generator.yaml  svc-payments-v2.yaml  svc-payments-v3.yaml  svc-reporting.yaml
synthetic-env/load-generator/: Dockerfile  script.js  simulate_traffic.py  simulate_v3_traffic.py
synthetic-env/svc-payments-v2/: main.py  pyproject.toml
synthetic-env/svc-payments-v3/: Dockerfile  main.py  pyproject.toml
synthetic-env/svc-reporting/: main.py  pyproject.toml
web/: .env.local.example  Dockerfile  instrumentation.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: layout.tsx  page.tsx
web/components/: AskKarmaConsole.tsx  BeforeAfterTimeline.tsx  ContractRadarChart.tsx  ContractSparkline.tsx  ContractTimeline.tsx  DemoRunPanel.tsx  GhostCard.tsx  GhostChat.tsx  GuestDemoButton.tsx  MigrationReadinessScore.tsx  OtelProvider.tsx  ViolationPulse.tsx  WatcherLiveLog.tsx
web/components/landing/: CTASection.tsx  DashboardShowcase.tsx  FeaturesGrid.tsx  Footer.tsx  GhostSection.tsx  HeroSection.tsx  HowItWorks.tsx  LiveProofSection.tsx  NavBar.tsx  ProblemSection.tsx  StatsStrip.tsx  TechStack.tsx  TerminalMockup.tsx  hooks.ts
web/components/ui/: badge.tsx  (+6 more)
web/lib/: admin-context.tsx  api.ts  dashboard-context.tsx  firebase.ts  otel.ts  sse-context.tsx  sse.ts  types.ts  user-profile-context.tsx
(+26 files in other folders)
