[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "karma-agents"
version = "0.1.0"
description = "Karma — multi-agent system for discovering and monitoring implicit service contracts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # Google ADK + Agent Platform
    "google-adk>=1.5.0",
    "google-cloud-aiplatform>=1.90.0",
    "mcp>=1.0.0",

    # Pydantic for contract schemas
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Firestore (contract mirror + ghost reports)
    "google-cloud-firestore>=2.19.0",

    # Pub/Sub (Watcher → Forensic trigger)
    "google-cloud-pubsub>=2.23.0",

    # HTTP client (MCP health checks, fallback calls)
    "httpx>=0.27.0",

    # OpenTelemetry — GenAI semantic conventions, OTLP/HTTP export to Dynatrace
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-semantic-conventions>=0.48b0",

    # Utilities
    "tenacity>=8.3.0",      # retry logic for MCP calls
    "structlog>=24.1.0",    # structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "respx>=0.21.0",    # httpx mock
]

[tool.hatch.build.targets.wheel]
packages = ["karma"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["karma"]
omit = ["tests/*"]
