[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "karma-api"
version = "0.1.0"
description = "Karma — FastAPI gateway for the Karma agent system"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-aiplatform>=1.70.0",
    "firebase-admin>=6.5.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    # OpenTelemetry — traces and metrics to Dynatrace
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-semantic-conventions>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",  # AsyncClient for testing
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
# B008: FastAPI's Depends() in function-default positions is the canonical pattern.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -v"
