[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svc-payments-v2"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis[asyncio]>=5.0.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "pydantic>=2.7.0",
]
